додано інпут з кнопкою, та наступні секції в розділі.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,170 @@
             </ul>
         </div>
     </footer>
+
+    <main>
+        <section class="section_1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h1>Awesome tools for<br>Designer & Developer.</h1>
+                        <p class="text-p-section_1">Antool is a web collection of information on paid or<br> free Design and Development tools</p>
+                        <div class="text-field__icon_search text-field__icon">
+                            <input type="text" class="input-section_1" placeholder="find more than 430+ tools...">
+                            <button class="btn-input" type="button">Search</button>
+                        </div>
+                        <div class="d-flex mar-top-144">
+                            <a href="#"><img class="image-social-1" src="image/facebook.png" alt="social"></a>
+                            <a href="#"><img class="image-social-2" src="image/instagram.png" alt="social"></a>
+                            <a href="#"><img class="image-social-3" src="image/twitter.png" alt="social"></a>
+                        </div>
+                    </div>
+                    <div class="col-6" style="padding-right: 0;">
+                        <img src="image/Illustration.png" alt="fon">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section_2">
+            <div class="container">
+                <h2>Most Popular Tools</h2>
+                <p class="p-text-section_2">Tools for the best Designers and Developers<br>most popularly used in the world</p>
+            </div>
+        </section>
+
+        <section class="section_3">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logo-figma.png" alt="figma">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">FIGMA</p>
+                                <p class="text-gold">Free</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logos_sketch.png" alt="sketch">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">Sketch</p>
+                                <p class="text-gold">Trial & Paid</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logos_visual-studio-code.png" alt="visual-studio-code">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">Visual Studio Code</p>
+                                <p class="text-gold">Free</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section_4">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logo-notion.png" alt="notion">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">Notion</p>
+                                <p class="text-gold">Free & Paid</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logo_slack.png" alt="slack">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">Slack</p>
+                                <p class="text-gold">Free & Paid</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                    <div class="col-4 w-h-294_392">
+                        <div class="d-flex">
+                            <div>
+                                <img src="image/logos_invision.png" alt="invision">
+                            </div>
+                            <div class="pad-l-box">
+                                <p class="name-figma">Invision</p>
+                                <p class="text-gold">Free & Paid</p>
+                            </div>
+                        </div>
+                        <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="d-flex">
+                            <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                            <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                            <button class="visit">Visit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     
     
 
