--- a/index.html
+++ b/index.html
@@ -189,6 +189,32 @@
                 </div>
             </div>
         </section>
+
+        <section class="section_5">
+            <div class="container">
+                <div class="text-center"><button class="btn-load">Load more</button></div>
+            </div>
+        </section>
+
+        <section class="section_6">
+            <div class="container container-box">
+                <p class="trusted">Trusted more than 150+ brand</p>
+                <div class="row">
+                    <div class="col-3 ">
+                        <img src="image/logos_microsoft.png" alt="micro">
+                    </div>
+                    <div class="col-3">
+                        <img src="image/logos_google.png" alt="google">
+                    </div>
+                    <div class="col-3">
+                        <img src="image/logos_slack.png" alt="slack">
+                    </div>
+                    <div class="col-3">
+                        <img src="image/logos_wordpress.png" alt="wordpress">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <br>
     <br>
