--- a/index.html
+++ b/index.html
@@ -200,17 +200,148 @@
             <div class="container container-box">
                 <p class="trusted">Trusted more than 150+ brand</p>
                 <div class="row">
-                    <div class="col-3 ">
+                    <div class="col-3 d-flex justify-content-center">
                         <img src="image/logos_microsoft.png" alt="micro">
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 d-flex justify-content-center">
                         <img src="image/logos_google.png" alt="google">
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 d-flex justify-content-center">
                         <img src="image/logos_slack.png" alt="slack">
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 d-flex justify-content-center">
                         <img src="image/logos_wordpress.png" alt="wordpress">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section_7">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5">
+                        <h3>Newcomer Tools</h3>
+                        <p class="p-wow">Wow! see the latest update of the most<br> recommended tools from reliable designers<br> and developers</p>
+                        <button class="btn-explore">Explore more</button>
+                    </div>
+                    <div class="col-7  d-flex justify-content-between">
+                        <div class="w-h-288_284">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="image/zeplin.png" alt="zeplin">
+                                </div>
+                                <div class="pad-l-box">
+                                    <p class="name-figma">Zeplin</p>
+                                    <p class="text-gold">Free & Paid</p>
+                                </div>
+                            </div>
+                            <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="d-flex">
+                                <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                                <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                                <button class="visit">Visit</button>
+                            </div>
+                        </div>
+                        <div class="w-h-288_284">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="image/jb_phpstorm.png" alt="phpstorm">
+                                </div>
+                                <div class="pad-l-box">
+                                    <p class="name-figma">PHPStorm</p>
+                                    <p class="text-gold">Free</p>
+                                </div>
+                            </div>
+                            <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="d-flex">
+                                <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                                <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                                <button class="visit">Visit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section_8">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5"></div>
+                    <div class="col-7  d-flex justify-content-between">
+                        <div class="w-h-288_284">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="image/jb_toolbox_app.png" alt="toolbox">
+                                </div>
+                                <div class="pad-l-box">
+                                    <p class="name-figma">Toolbox</p>
+                                    <p class="text-gold">Free</p>
+                                </div>
+                            </div>
+                            <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="d-flex">
+                                <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                                <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                                <button class="visit">Visit</button>
+                            </div>
+                        </div>
+                        <div class="w-h-288_284">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="image/procreate.png" alt="phpstorm">
+                                </div>
+                                <div class="pad-l-box">
+                                    <p class="name-figma">Procreate</p>
+                                    <p class="text-gold">Paid</p>
+                                </div>
+                            </div>
+                            <p class="text-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="d-flex">
+                                <img class="like" src="image/flat-color-icons_like.png" alt="like">
+                                <img class="load" src="image/eva_folder-add-outline.png" alt="load">
+                                <button class="visit">Visit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section_9">
+            <div class="container">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="image/Group 1435.png" class="d-block w-100" alt="Group">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="image/Group 1435.png" class="d-block w-100" alt="Group">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="image/Group 1435.png" class="d-block w-100" alt="Group">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev justify-content-start" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </button>
+                    <button class="carousel-control-next justify-content-end" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </button>
+                  </div>
+            </div>
+        </section>
+        <section class="section_10">
+            <div class="container">
+                <div class="box-section_10">
+                    <h4>Become a contributor?</h4>
+                    <p class="p-join">Join us and get tips & tricks to become a great Designer and Developer</p>
+                    <div class="input-pos-rel">
+                        <input type="text" class="form-section-10" placeholder="Enter your email..." aria-label="Enter your email..." aria-describedby="button-addon2">
+                        <button class="btn-section-10" type="button" id="button-addon2">Join Us</button>
                     </div>
                 </div>
             </div>
@@ -250,6 +381,6 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
