Додано футер, та створена анімація  тексту в секції 10. Лендінг закінчено

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <section class="section_9">
             <div class="container">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                    <div class="carousel-indicators">
+                    <div class="carousel-indicators mar-top-indicator">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -337,7 +337,7 @@
         <section class="section_10">
             <div class="container">
                 <div class="box-section_10">
-                    <h4>Become a contributor?</h4>
+                    <h4 class="typing-demo">Become a contributor?</h4>
                     <p class="p-join">Join us and get tips & tricks to become a great Designer and Developer</p>
                     <div class="input-pos-rel">
                         <input type="text" class="form-section-10" placeholder="Enter your email..." aria-label="Enter your email..." aria-describedby="button-addon2">
@@ -347,40 +347,40 @@
             </div>
         </section>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <a><img src="image/logo-footer.png" alt="logo_footer"></a>
+                    <p class="p-text-white-logo">Copyright 2021. Antools</p>
+                    <p class="text-footer-logo">Antool is a web collection of<br> information on paid or free Design<br> and Development tools</p>
+                </div>
+                <div class="col-3">
+                    <h6>Contact Us</h6>
+                    <ul class="ul-list-footer">
+                        <li class="li-footer">+621987463</li>
+                        <li class="li-footer">M Building, No.10 A</li>
+                        <li class="li-footer">antools@awesome.com</li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h6>Categories</h6>
+                    <ul class="ul-list-footer"> 
+                        <li class="li-footer">Design</li>
+                        <li class="li-footer">Development</li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h6>Company Info</h6>
+                    <ul class="ul-list-footer">
+                        <li class="li-footer">About Us</li>
+                        <li class="li-footer">Our Partners</li>
+                        <li class="li-footer">Blog</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
